# EnergyDataModel

./: .all-contributorsrc  .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENCE.md  README.md  build_class_explorer.py  energydatamodel.py  examples.ipynb  pyproject.toml  requirements.txt  setup.py  test.py
.github/workflows/: publish.yml
EnergyDataModel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: class_hierarchy.rst  conf.py  energydatamodel.rst  examples.rst  index.rst  installation.rst  introduction.rst  quickstart.rst  reference.rst  requirements.txt  toc.rst
docs/_build/doctrees/: energydatamodel.doctree  environment.pickle  examples.doctree  index.doctree  installation.doctree  introduction.doctree  quickstart.doctree  toc.doctree
docs/_build/doctrees/energydatamodel/: energyasset.doctree  energysystem.doctree  location.doctree  pv.doctree  site.doctree
docs/_build/html/: .buildinfo  energydatamodel.html  examples.html  genindex.html  index.html  installation.html  introduction.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  toc.html
docs/_build/html/_sources/: index.rst.txt  installation.rst.txt  quickstart.rst.txt  toc.rst.txt
docs/_build/html/_sources/energydatamodel/: energyasset.rst.txt  location.rst.txt  site.rst.txt
docs/_build/html/energydatamodel/: energyasset.html  energysystem.html  location.html  pv.html  site.html
docs/_static/: edm-explorer.html
docs/_static/css/: class-hierarchy.css
docs/_templates/: layout.html
docs/energydatamodel/: abstract.rst  area.rst  base.rst  battery.rst  building.rst  collection.rst  container.rst  energysystem.rst  geospatial.rst  grid.rst  heatpump.rst  hydro.rst  json_io.rst  powergrid.rst  pv.rst  reference.rst  timeseries.rst  vocabulary.rst  weather.rst  weathersensor.rst  wind.rst
docs/notebooks/: example-1-to-json.ipynb  quickstart.ipynb
energydatamodel/: __init__.py  abstract.py  area.py  asset.py  base.py  bases.py  battery.py  building.py  collection.py  constructors.py  container.py  containers.py  edge.py  element.py  energyasset.py  energydatamodel.py  energysystem.py  entity.py  geospatial.py  grid.py  heatpump.py  house.py  hydro.py  json_io.py  location.py  node.py  powergrid.py  pv.py  quantities.py  reference.py  requirements.txt  site.py  solar.py  timeseries.py  weather.py  weathersensor.py  wind.py
energydatamodel/examples/: energy_system_tree.dot  example-1-erdantic.ipynb  example-1-to-json.ipynb  example-1-to-tree-json.ipynb  example-2-erdantic.ipynb  example-3-draw-tree.ipynb  example-3-tree.ipynb
examples/: quickstart.ipynb
tests/: test_entity.py  test_extension.py  test_json.py  test_reference.py  test_tree_methods.py
