[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "energydatamodel"
version = "0.0.4"
authors = [
    { name = "rebase.energy" }
]
description = "Data model for energy modelling."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.0.1",
    "pandas>=2.2.2",
    "pvlib>=0.12.0",
    "shapely>=2.0.7",
    "timedatamodel>=0.2.1",
    "tzdata; sys_platform == 'win32'",
    "uuid6>=2024.1",
]

[project.urls]
homepage = "https://energydatamodel.org"
repository = "https://github.com/rebase-energy/EnergyDataModel"
documentation = "https://docs.energydatamodel.org/en/latest"

[project.optional-dependencies]
docs = [
    "sphinx>=7.4",
    "sphinx-autodoc-typehints>=2.0.1",
    "sphinx-rtd-theme>=3.0.2",
    "nbsphinx>=0.9",
    "docutils>=0.20",
]

[tool.setuptools]
packages = ["energydatamodel"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "nbconvert>=7.16.0",
]
